@@ -19,9 +19,10 @@
 
 #include "common.h"
 #include "sysinfo.h"
-#include "log.h"
 #include "md5.h"
 #include "file.h"
+
+#define ZBX_MAX_DB_FILE_SIZE	64 * ZBX_KIBIBYTE	/* files larger than 64 KB cannot be stored in the database */
 
 extern int	CONFIG_TIMEOUT;
 
@@ -107,14 +108,17 @@ int	VFS_FILE_CONTENTS(const char *cmd, const char *param, unsigned flags, AGENT_
 	char		filename[MAX_STRING_LEN], encoding[32];
 	char		read_buf[MAX_BUFFER_LEN], *utf8, *contents = NULL;
 	int		contents_alloc = 512, contents_offset = 0;
-	int		f, nbytes;
+	int		nbytes, flen, f = -1, ret = SYSINFO_RET_FAIL;
 	struct stat	stat_buf;
+	double		ts;
 
-	if (num_param(param) > 2)
-		return SYSINFO_RET_FAIL;
+	ts = zbx_time();
+
+	if (2 < num_param(param))
+		goto err;
 
 	if (0 != get_param(param, 1, filename, sizeof(filename)))
-		return SYSINFO_RET_FAIL;
+		goto err;
 
 	if (0 != get_param(param, 2, encoding, sizeof(encoding)))
 		*encoding = '\0';
@@ -122,33 +126,38 @@ int	VFS_FILE_CONTENTS(const char *cmd, const char *param, unsigned flags, AGENT_
 	zbx_strupper(encoding);
 
 	if (0 != zbx_stat(filename, &stat_buf))
-		return SYSINFO_RET_FAIL;
+		goto err;
 
-	if (stat_buf.st_size > 65535)	/* files larger than 64 kB cannot be stored in the database */
-	{
-		zabbix_log(LOG_LEVEL_WARNING, "Item %s not supported: file too big (%lu bytes)",
-				cmd, (size_t)stat_buf.st_size);
-		return SYSINFO_RET_FAIL;
-	}
+	if (CONFIG_TIMEOUT < zbx_time() - ts)
+		goto err;
+
+	if (ZBX_MAX_DB_FILE_SIZE < stat_buf.st_size)
+		goto err;
 
 	if (-1 == (f = zbx_open(filename, O_RDONLY)))
-		return SYSINFO_RET_FAIL;
+		goto err;
+
+	if (CONFIG_TIMEOUT < zbx_time() - ts)
+		goto err;
 
 	contents = zbx_malloc(contents, contents_alloc);
 
+	flen = 0;
+
 	while (0 < (nbytes = zbx_read(f, read_buf, sizeof(read_buf), encoding)))
 	{
+		if (CONFIG_TIMEOUT < zbx_time() - ts || ZBX_MAX_DB_FILE_SIZE < (flen += nbytes))
+			goto err;
+
 		utf8 = convert_to_utf8(read_buf, nbytes, encoding);
 		zbx_strcpy_alloc(&contents, &contents_alloc, &contents_offset, utf8);
 		zbx_free(utf8);
 	}
 
- 	close(f);
-
 	if (-1 == nbytes)	/* error occurred */
 	{
 		zbx_free(contents);
-		return SYSINFO_RET_FAIL;
+		goto err;
 	}
 
 	if (0 != contents_offset)
@@ -160,11 +169,16 @@ int	VFS_FILE_CONTENTS(const char *cmd, const char *param, unsigned flags, AGENT_
 	}
 
 	if (NULL == contents)	/* EOF */
-		contents = strdup("EOF");
+		contents = zbx_strdup(contents, "EOF");
 
 	SET_TEXT_RESULT(result, contents);
 
-	return SYSINFO_RET_OK;
+	ret = SYSINFO_RET_OK;
+err:
+	if (-1 != f)
+		close(f);
+
+	return ret;
 }
 
 int	VFS_FILE_REGEXP(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
